# advance-credit

./: .gitignore  CLOUDINARY_SETUP.md  DEPLOYMENT.md  EMAIL_SETUP.md  PRODUCTION_CHECKLIST.md  PRODUCTION_DEPLOYMENT.md  Procfile  README.md  RENDER_CHECKLIST.md  RENDER_DEPLOYMENT.md  RENDER_DEPLOYMENT_STEPS.md  alembic.ini  build.sh  create_full_leads_table_in_site_db.py  crm.db  deploy_test.py  deploy_to_render.py  email_config_example.txt  env.example  env_example.txt  env_production.txt  hello.py  how f0c9d20 --name-status  main.py  pyproject.toml  requirements.txt  setup_production.py  site.db  tatus  test_db.py
__pycache__/: del.py
alembic/: env.py
alembic/versions/: a11cd6edc2f4_initial_tables.py  ec3bead05a27_add_location_field_to_faq_model.py
app/: db.py  main.py  seed.py  update_bank_loans.py  update_partner_data.py
app/admin/: routes.py
app/scrapers/: axis_scraper.py  bajajfinserv_scraper.py  hdfc_scraper.py  icici_scraper.py
app/templates/: about.html  admin_base.html  admin_dashboard.html  admin_login.html  admin_partners.html  emi.html  footer.html  home.html  navbar.html  partners.html  products.html  services.html
common_models/: __init__.py
crm_portal/: create_tables.py  main.py  routes.py
crm_portal/templates/: analytics.html  base.html  bulk_upload.html  dashboard.html  employee_edit.html  employee_new.html  employees.html  lead_new.html  leads.html  login.html  register.html
deployment/requirements/: crm.txt  main.txt
docs/: DEPLOYMENT_GUIDE.md  README.md
src/: __init__.py
src/blog/: models.py  (+3 more)
static/: robots.txt  sitemap.xml
(+103 files in other folders)
