[tool.poetry]
name = "news-slider"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.14"
uvicorn = "^0.35.0"
jinja2 = "^3.1.6"
python-multipart = "^0.0.20"
sqlalchemy = "^2.0.41"
passlib = "^1.7.4"
requests = "^2.32.4"
beautifulsoup4 = "^4.13.4"
pandas = "^2.3.0"
openpyxl = "^3.1.5"
python-dotenv = "^1.1.1"
email-validator = "^2.2.0"
langchain = "^0.3.26"
chromadb = "^1.0.15"
ollama = "^0.5.1"
gradio = "^5.35.0"
streamlit = "^1.46.1"
itsdangerous = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
